--- a/Web/style.css
+++ b/Web/style.css
@@ -80,7 +80,7 @@ body {
 
 .rectangle-2 img {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   height: 606px;
   left: 0px;
   top: 148px;
@@ -110,8 +110,8 @@ body {
   position: absolute;
   width: 842px;
   height: 275px;
-  left: 598px;
-  /* right: 0; */
+  /* left: 598px; */
+  right: 0;
   top: 314px;
 }
 
@@ -318,9 +318,9 @@ body {
   position: absolute;
   width: 500px;
   height: 719px;
-  left: 942px;
+  /* left: 942px; */
   top: 768px;
-  /* right: 0; */
+  right: 0;
   /* background: #ffffff; */
 }
 
@@ -485,7 +485,7 @@ text-align: center; */
 
 .rectangle-15 img {
   position: absolute;
-  width: 1440px;
+  width: 100%;
   height: 606px;
   left: 0px;
   top: 1998px;
@@ -914,7 +914,7 @@ text-align: center; */
   position: absolute;
   width: 289.24px;
   height: 495px;
-  left: 1104.76px;
+  left: 1094.76px;
   top: 4783px;
 
   background: #ffffff;
@@ -1020,9 +1020,9 @@ text-align: center; */
 
 .rectangle-31 {
   position: absolute;
-  width: 1480px;
+  width: 100%;
   height: 154px;
-  left: -18px;
+  /* left: -18px; */
   top: 5852px;
 
   background: #1e1e1e;
@@ -1130,7 +1130,7 @@ text-align: center; */
   position: absolute;
   width: 159px;
   height: 30px;
-  left: 1125px;
+  left: 1180px;
   top: 5907px;
 
   font-family: "Poppins";
